===================================
django-registration-redux changelog
===================================

Version 1.9, TBD
----------------
* BACKWARDS-INCOMPATIBLE CHANGE: Change of return signature of
``RegistrationProfileManager.activate_user``. A tuple containing the User
instance and a boolean of whether or not said user was activated is now
returned.
  `#309 <https://github.com/macropin/django-registration/pull/309>`_.
* Bugfix: Updates `pt_BR` translation messages. -
`#305 <https://github.com/macropin/django-registration/pull/305>_`
* Bugfix: Update all translation strings with `django-admin makemessages --all`. -
`#304 <https://github.com/macropin/django-registration/pull/304>_`
* Feature: Configure from email address from ``Site`` object. -
`#294 <https://github.com/macropin/django-registration/pull/294>_`

Version 1.8, 03 October, 2017
----------------
* Bugfix: Add `outlook.com` to the list of free email providers. -
`#287 <https://github.com/macropin/django-registration/pull/287>_`
* Documentation: Add possible settings for activation emails. -
`#283 <https://github.com/macropin/django-registration/pull/282>_`
* Feature: Added `REGISTRATION_ADMINS` setting to support different admins
(than those in `ADMINS`) in charge of registration. Falls back to `ADMINS` in
case this is not set. -
`#279 <https://github.com/macropin/django-registration/pull/279>_`
* Documentation: Added documentation regarding admin approval registration. -
`#279 <https://github.com/macropin/django-registration/pull/279>_`
* Redirect logged in users away from the registration page if authenticated. -
`#262 <https://github.com/macropin/django-registration/pull/262>_`
* Document how to send password reset email with HTML content. -
`#276 <https://github.com/macropin/django-registration/pull/276>_`

Version 1.7, 18 July, 2017
----------------
* Fix security issue of leaking password reset token through the Referer